fixed the button and text alignment in the newsletter section

--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,20 @@ NAVIGATION BAR SECTION
   background: url("../img/bg-news.png") center center / cover no-repeat;
 }
 
+.newsletter-form {
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 0;
+  font-family: "Roboto Condensed", sans-serif;
+  background: url(https://g.newsweek.com/www/images/free-sign-up.svg)
+    center/108px no-repeat #f61602;
+  border-radius: 5px;
+  padding: 18px;
+  margin-top: 8px;
+}
+
 /* footer section  */
 
 .band {
@@ -543,6 +557,12 @@ NAVIGATION BAR SECTION
 }
 
 /* MEDIA QUERY */
+@media (max-width: 767px) {
+  .newletter-text {
+    text-align: center;
+  }
+}
+
 @media (min-width: 768px) {
   .subscribe {
     background-color: #f4f5f6;
